[package]
name = "opaque"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
edition = "2018"

[dependencies]
rand = "*"
digest = "*"
curve25519-dalek = { version = "1.0.0-pre.0", features = [ "serde" ] }
serde = "*"
serde_derive = "*"

[dev-dependencies]
arrayref = "0.3"
oake = { path = "../oake" }
norx = "*"
scrypt = "*"
argon2rs = "*"
sha3 = "*"
serde_cbor = "*"
