[package]
name = "opaque"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
edition = "2018"

[dependencies]
rand = "0.5"
digest = "0.8"
curve25519-dalek = { version = "1.0.0-pre.0", features = [ "serde" ] }
serde = "1"
serde_derive = "1"

[dev-dependencies]
arrayref = "0.3"
# oake = { path = "../oake" }
oake = { git = "https://github.com/noisat-labs/oake" }
norx = "0.1"
scrypt = "0.2"
sha3 = "0.8"
serde_cbor = "0.9"
